--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,4 @@ jobs:
       FOMOD_AE_DESCR: 'Select this if you are using Skyrim Anniversary Edition v1.6 or higher.'
       FOMOD_AE_MIN_GAME_VERSION: '1.6'
       PUBLISH_ARCHIVE_TYPE: '7z'
+      VCPKG_COMMIT_ID: '14bb451131ccf6be50a63a8d9dfe7980e46b5958'
